--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <div class="attribution">
     <div class="wrapper">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="https://github.com/impiia">Impiia</a>.
       </div>
     </div>
   </footer>
