--- a/index.html
+++ b/index.html
@@ -1,61 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
- <link rel="stylesheet" type="text/css" href="./styles/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700;800&display=swap" rel="stylesheet">
 
-  <title>Frontend Mentor | Age calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>The Bright Future of Web 3.0</title>
 
 </head>
+
 <body>
-  <main>
-  <div class="card">
-  <div class="card-header">
-  <div class="form-group">
-    <label for="day-input">DAY</label>
-    <input type="text" id="day-input" name="day" placeholder="DD">
-    <p id="dayErrorText">This file is required</p>
-  </div>
-  <div class="form-group">
-    <label for="month-input">MONTH</label>
-    <input type="text" id="month-input" name="month" placeholder="MM">
-      <p id="monthErrorText">This file is required</p>
-  </div>
-  <div class="form-group">
-    <label for="year-input">YEAR</label>
-    <input type="text" id="year-input" name="year" placeholder="YYYY">
-      <p id="yearErrorText">This file is required</p>
-    </div>
-    </div>
-    <div class="button-group">
-    <hr class="line">
+  <header class="header">
+    <div class="wrapper">
+      <div class="header__wrapper">
+        <div class="header__logo">
+          <a href="#!" class="header__logo-link">
+            <img src="./assets/images/logo.svg" alt="The Bright Future of Web 3.0" class="header__logo-pic">
+          </a>
+        </div>
 
-    <button type="submit" class="round" onclick="calcAge()">
-              <img
-                src="./assets/images/icon-arrow.svg"
-                class="icon_logo"
-                alt="icon_logo"
-              />
-      </button>
-    </div>
-      <div class="age-result">
-      <h1 id="years"><span class="dash">--</span> years</h1>
-      <h1 id="months"><span class="dash">--</span> months</h1>
-      <h1 id="days"><span class="dash">--</span> days</h1>
+        <nav class="header__nav">
+          <ul class="header__list">
+            <li class="header__item">
+              <a href="#!" class="header__link">Home</a>
+            </li>
 
+            <li class="header__item">
+              <a href="#!" class="header__link">New</a>
+            </li>
+
+            <li class="header__item">
+              <a href="#!" class="header__link">Popular</a>
+            </li>
+
+            <li class="header__item">
+              <a href="#!" class="header__link">Trending</a>
+            </li>
+
+            <li class="header__item">
+              <a href="#!" class="header__link">Categories</a>
+            </li>
+          </ul>
+
+          <div class="header__nav-close">
+            <span class="header__nav-close-line"></span>
+            <span class="header__nav-close-line"></span>
+          </div>
+        </nav>
+
+        <div class="header__burger burger">
+          <span class="burger__line burger__line_first"></span>
+          <span class="burger__line burger__line_second"></span>
+          <span class="burger__line burger__line_third"></span>
+
+        </div>
+      </div>
     </div>
-  </div>
-</main>
-<footer>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/impiia">Impiia</a>.
-  </div>
-</footer>
+
+  </header>
+
+  <main class="main">
+   
+    <section class="intro">
+      <div class="wrapper">
+        <div class="intro__cards">
+          <div class="intro__article-card">
+            <picture>
+              <source srcset="./assets/images/image-web-3-mobile.jpg" media="(max-width: 767px)">
+              <img src="./assets/images/image-web-3-desktop.jpg" alt="The Bright Future of Web 3.0?" class="intro__img">
+            </picture>
+            <div class="intro__article-card-row">
+              <div>
+                <h1 class="intro__title">
+                  The Bright Future of Web 3.0?
+                </h1>
+              </div>
+
+              <div class="intro__article-container">
+                <p class="intro__description">
+                  We dive into the next evolution of the web that claims to put the power of the platforms back into the
+                  hands of the people.
+                  But is it really fulfilling its promise?
+                </p>
+                <button class="btn__read-more">READ MORE</button>
+              </div>
+            </div>
+          </div>
+          <div class="right-banner__card">
+            <h2 class="right-banner__title">New</h2>
+
+            <ul class="news__list">
+
+              <li class="news__item">
+                <a href="#!" class="news__title"> Hydrogen VS Electric Cars </a>
+                <p class="news__text"> Will hydrogen-fueled cars ever catch up to EVs?
+                </p>
+              </li>
+
+              <li class="news__item">
+                <a href="#!" class="news__title">The Downsides of AI Artistry</a>
+                <p class="news__text">
+                  What are the possible adverse effects of on-demand AI image generation?
+                </p>
+              </li>
+
+              <li class="news__item">
+                <a href="#!" class="news__title">Is VC Funding Drying Up?</a>
+                <p class="news__text">
+                  Private funding by VC firms is down 50% YOY. We take a look at what that means.
+                </p>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="articles">
+      <div class="wrapper">
+        <div class="article__cards">
+
+          <div class="article__card">
+            <div class="article__card-pic">
+              <img src="./assets/images/image-retro-pcs.jpg" alt="Reviving Retro PCs" class="article__card-thum">
+            </div>
+            <div class="article__card-desc">
+              <h3 class="article__card-num">
+                01
+              </h3>
+              <a href="#!" class="article__card-title">
+                Reviving Retro PCs
+              </a>
+              <p class="article__card_text">
+                What happens when old PCs are given modern upgrades?
+              </p>
+            </div>
+          </div>
+
+          <div class="article__card">
+            <div class="article__card-pic">
+              <img src="./assets/images/image-top-laptops.jpg" alt="Top 10 Laptops of 2022" class="article__card-thum">
+            </div>
+            <div class="article__card-desc">
+              <h3 class="article__card-num">
+                02
+              </h3>
+              <a href="#!" class="article__card-title">
+                Top 10 Laptops of 2022
+              </a>
+              <p class="article__card_text">
+                Our best picks for various needs and budgets.
+              </p>
+            </div>
+          </div>
+
+          <div class="article__card">
+            <div class="article__card-pic">
+              <img src="./assets/images/image-gaming-growth.jpg" alt="The Growth of Gaming" class="article__card-thum">
+            </div>
+            <div class="article__card-desc">
+              <h3 class="article__card-num">
+                03
+              </h3>
+              <a href="#!" class="article__card-title">
+                The Growth of Gaming
+              </a>
+              <p class="article__card_text">
+                How the pandemic has sparked fresh opportunities.
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="attribution">
+    <div class="wrapper">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/impiia">Impiia</a>.
+      </div>
+    </div>
+  </footer>
   <script src="index.js"></script>
 </body>
 </html>
